# ow_simulator

./: .gitignore  CONTRIBUTORS.md  LICENSE.txt  README.md  pull_request_template.md
ow_bag_recorder/: CMakeLists.txt  README.md  package.xml
ow_bag_recorder/config/: options.yaml  topics.yaml
ow_bag_recorder/src/: bag_recorder_node.cpp  config.cpp  config.h
ow_dynamic_terrain/: CMakeLists.txt  README.md  package.xml
ow_dynamic_terrain/env-hooks/: 80.ow_dynamic_terrain.sh.in
ow_dynamic_terrain/heightmaps/: mtsthelens.dem  mtsthelens_129x129.dem  mtsthelens_513x513.dem
ow_dynamic_terrain/include/: DigDetector.h  DigStateMachine.h  MergeMethods.h  OpenCV_Util.h  TerrainBrush.h  TerrainModifier.h  memory_ext.h
ow_dynamic_terrain/launch/: default.launch  europa.launch  husky.rviz  robot.launch  terrain_world.launch
ow_dynamic_terrain/misc/: first_pass_heightmap.tif
ow_dynamic_terrain/msg/: modified_terrain_diff.msg  modify_terrain.msg  modify_terrain_capsule.msg  modify_terrain_circle.msg  modify_terrain_ellipse.msg  modify_terrain_patch.msg  scoop_dig_phase.msg
ow_dynamic_terrain/scripts/: modify_terrain_grinder_pub.py  modify_terrain_patch_pub.py  modify_terrain_patch_sub.py  modify_terrain_scoop_pub.py
ow_dynamic_terrain/src/: DigDetector.cpp  DigStateMachine.cpp  DynamicTerrainBase.cpp  DynamicTerrainBase.h  DynamicTerrainModel.cpp  DynamicTerrainVisual.cpp  DynamicTerrainVisual.h  MergeMethods.cpp  MergeMethods.h  MergeOperations.cpp  MergeOperations.h  OpenCV_Util.cpp  OpenCV_Util.h  TerrainBrush.cpp  TerrainBrush.h  TerrainModifier.cpp  TerrainModifier.h  dig_detection_node.cpp  dynamic_terrain_model.cpp  dynamic_terrain_visual.cpp  modify_terrain.cpp  modify_terrain.h  shared_constants.h  terrain_modifier.cpp  terrain_modifier.h
ow_dynamic_terrain/test/: test_MergeMethods.cpp  test_ModifyTerrainPatch.py
ow_dynamic_terrain/urdf/: simple_camera.urdf
ow_dynamic_terrain/worlds/: default.world  europa.world  volcano.world
ow_gazebo_plugins/: CMakeLists.txt  package.xml
ow_gazebo_plugins/celestial_body_plugin/: CMakeLists.txt  CelestialBodyPlugin.cpp  CelestialBodyPlugin.h  package.xml
ow_gazebo_plugins/cosimulation_plugin/: CMakeLists.txt  Cosimulator.cpp  package.xml
ow_gazebo_plugins/data/: scoop_force_circular.csv
ow_gazebo_plugins/link_force_plugin/: CMakeLists.txt  CSVRow.h  README.md  package.xml
ow_gazebo_plugins/ow_dynamic_terrain/: CMakeLists.txt  README.md  package.xml
ow_gazebo_plugins/ow_gazebo_plugins/: CMakeList.txt  package.xml
ow_gazebo_plugins/src/: CMakeLists.txt
ow_lander/: .setup_assistant  CMakeLists.txt  README.md  package.xml  setup.py
ow_lander/action/: ARM_MOVE_JOINT.action  ActivateComms.action  AntennaPanTilt.action  ArmMoveJoint.action  ArmMoveJoints.action  ArmSetTool.action  CameraCapture.action  CameraSetExposure.action  Deliver.action  DigCircular.action  DigLinear.action  Discard.action  DockIngestSample.action  Grind.action  GuardedMove.action  Guardedmove.action  Stop.action  Stow.action  Tilt.action  Unstow.action
ow_lander/config/: deliver.yaml  fake_controllers.yaml  joint_limits.yaml  joint_names_lander_urdf_v9.yaml  kinematics.yaml  lander.rviz  lander.srdf  lander_control.yaml  lander_urdf_v9.srdf  moveit.rviz  ompl_planning.yaml  ow_arm_sim.rviz  ros_controllers.yaml
ow_lander/data/: data.csv  moveit_out_2019-03-14-12-50-20.bag  send_moveit_trajectory.bash  trajectory_2019-03-14_13:45:17.bag  trajectory_2019-03-14_13:45:17.csv
ow_lander/env-hooks/: 65.ow_lander.sh.in
ow_lander/launch/: arm_sim_rviz.launch  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  lander_moveit_controller_manager.launch.xml  lander_urdf_v9_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch  ompl_planning_pipeline.launch.xml  ow_arm_sim.launch  ow_arm_sim_rviz.launch  plan_trajectory.launch  planning.launch  planning_context.launch  planning_pipeline.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  rviz.launch  sensor_manager.launch.xml  setup_assistant.launch  spawn.launch  trajectory_execution.launch  trajectory_execution.launch.xml  warehouse.launch
ow_lander/meshes/: antenna_arm.STL  antenna_panel.STL  base_link.STL  base_link_col.STL  ee_rasps.STL  ee_scoop.STL  l_ant_foot.STL  l_ant_foot_col.STL  l_ant_panel.STL  l_ant_panel_col.STL  l_dist.STL  l_dist_col.STL  l_grinder.STL  l_hand.STL  l_hand_col.STL  l_prox.STL  l_prox_col.STL  l_scoop.STL  l_shou.STL  l_shou_col.STL  l_wrist.STL  l_wrist_col.STL  lander_body.STL  link_distal.STL  link_hand.STL  link_proximal.STL  link_shoulder.STL  link_wrist.STL  sample_dock.stl
ow_lander/msg/: ActionServiceState.msg  GuardedMoveFinalResult.msg  GuardedMoveResult.msg
ow_lander/nodes/: static_tf2_broadcaster.py
ow_lander/scripts/: .directory  LanderInterface.py  README.md  action_deliver_sample.py  action_dig_circular.py  action_dig_linear.py  action_grind.py  action_guarded_move.py  action_trajectories.py  activate_comms.py  activity_deliver_sample.py  activity_dig_trench.py  activity_discard.py  activity_full_digging_traj.py  activity_grind.py  activity_guarded_move.py  activity_move_guarded.py  activity_reset.py  activity_sample_delivery.py  activity_saw_motion_planning.py  all_action_trajectories.py  all_action_trajectories_class.py  all_action_trajectoris.py  all_arm_action_servers.py  antenna_action_client.py  antenna_action_server.py  antenna_pan_tilt_action_client.py  antenna_pan_tilt_action_client_multiple_goal.py  antenna_pan_tilt_action_server.py  antenna_pan_tilt_server.py  (+92 more)
ow_materials/: CMakeLists.txt  package.xml
ow_power_system/: .#package.xml  .gitignore  CMakeLists.txt  CSV_DEMO_README.md  README.md  package.xml  package.xml~
ow_regolith/: CMakeLists.txt  README.md  package.xml
ow_sim_tests/: CMakeLists.txt  README.md  package.xml  setup.py
ow_testbed/: CMakeLists.txt  README.md  package.xml
(+501 files in other folders)
