<?xml version="1.0"?>
<package format="2">
  <name>ow_lander</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for lander in OceanWATERS</p>
    <p>This package contains configuration data, 3D models and launch files for the lander</p>
  </description>

  <author>Antoine Tardy</author>
  <maintainer email="antoine.tardy@nasa.gov" />

  <author email="ussama.naal@nasa.gov">Ussama Naal</author>
  <maintainer email="ussama.naal@nasa.gov">Ussama Naal</maintainer>

  <license>NASA OPEN SOURCE AGREEMENT VERSION 1.3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>
    
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>effort_controllers</exec_depend>

  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>moveit_fake_controller_manager</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_visual_tools</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_eigen</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <export>
    <architecture_independent />
  </export>
</package>
